testsuite/tests/linear/should_fail/LinearNoExt.hs
{-# LANGUAGE UnicodeSyntax #-}
module LinearNoExt where

type T = a ⊸ a
