testsuite/tests/linear/should_fail/LinearNoExt.stderr

LinearNoExt.hs:4:12: error:
    Enable LinearTypes to allow linear functions
